# SysIntegrationOpgaver

0.4._basic_servers/: notes.txt
0.4._basic_servers/node/: main.js
0.4._basic_servers/node/me_files/: me.txt  me.xml  me.yaml
0.4._basic_servers/python/: main.py  pyproject.toml
0.4._basic_servers/python/me_files/: me.csv
05._date/node/: index.js
05._date/python/: main.py
06._server_to_server/node/: app.js
06._server_to_server/python/: main.py
07._dotenv/node/: .env  index.js  package.json
07._dotenv/python/: .env  main.py
08._database_documentation/backup/: notes.txt
08._database_documentation/documentation/: notes.txt
09._OpenAPI/node/: app.js
09._OpenAPI/node/routers/: usersRouter.js
09._OpenAPI/python/: main.py  notes.txt  pyproject.toml
09._OpenAPI/python/routers/: spacecraft_router.py
12._server-sent_events/node/: app.js
12._server-sent_events/node/public/: index.html
12._server-sent_events/python/: main.py  notes.txt
12._server-sent_events/python/templates/: index.html
13._github_webhooks/node/: app.js
13._github_webhooks/python/: notes.txt
handin1/: README  me.json  me_readers.js  me_readers.py  package-lock.json  package.json
