[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Rasmus G <groenbek@live.dk>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.2.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
